Fix header button spacing

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
     'profile profile controls';
 
   gap: 1em;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: auto;
   grid-template-rows: 1fr 2fr;
 }
 
